--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-theme: jekyll-theme-midnight
+#theme: jekyll-theme-midnight
+remote_theme: bchetty/jekyllBasic
 title: Felix's homepage
 description: Bookmark this to keep an eye on my project updates!
