--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-#theme: jekyll-theme-midnight
-remote_theme: bchetty/jekyllBasic
+theme: jekyll-theme-midnight
+#remote_theme: bchetty/jekyllBasic
 title: Felix's homepage
 description: Bookmark this to keep an eye on my project updates!
